feat(rtmp server) - basic hls configuration

--- a/rtmp_server/rtmp/nginx.conf
+++ b/rtmp_server/rtmp/nginx.conf
@@ -11,6 +11,33 @@ rtmp {
         application live {
             live on;
             record off;
+
+            hls on;
+            hls_path /tmp/hls;
+            hls_fragment 10s; #default is 5s
+            hls_playlist_length 2m; #Once playlist length is reached it deletes the oldest fragments
+        }
+    }
+}
+
+http {
+    server {
+        listen 8080;
+
+        location / {
+            root /www;
+        }
+
+        location /hls {
+            types {
+                application/vnd.apple.mpegurl m3u8;
+                application/octet-stream ts;
+            }
+            root /tmp;
+            add_header Cache-Control no-cache;
+
+            # avoids issues with cross-domain HTTP requests
+            add_header Access-Control-Allow-Origin *;
         }
     }
 }
