--- a/rtmp_server/docker-compose.yml
+++ b/rtmp_server/docker-compose.yml
@@ -3,7 +3,10 @@ services:
     build: ./rtmp
     ports:
       - "1935:1935"
+      - "8080:8080"
     container_name: rtmp_server
+    volumes:
+      - ./data:/3111173B-4D9B-4E45-9A45-C5EA0981949D/hls
 
   auth:
     build: ./auth
