--- a/rtmp_server/docker-compose.yml
+++ b/rtmp_server/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "8080:8080"
     container_name: rtmp_server
     volumes:
-      - ./data:/3111173B-4D9B-4E45-9A45-C5EA0981949D/hls
+      - ./data:/hls
 
   auth:
     build: ./auth
