--- a/rtmp_server/rtmp/nginx.conf
+++ b/rtmp_server/rtmp/nginx.conf
@@ -13,9 +13,9 @@ rtmp {
             record off;
 
             hls on;
-            hls_path /3111173B-4D9B-4E45-9A45-C5EA0981949D/hls;
+            hls_path /hls/;
             hls_fragment 10s; # default is 5s
-            hls_playlist_length 5m; # default is 30s
+            hls_playlist_length 2m; # default is 30s
             # once playlist length is reached it deletes the oldest fragments
 
             on_publish http://auth_server:3000/auth;
@@ -36,7 +36,8 @@ http {
                 application/vnd.apple.mpegurl m3u8;
                 application/octet-stream ts;
             }
-            root /3111173B-4D9B-4E45-9A45-C5EA0981949D;
+            # With /hls mounted at the root level, set the root to "/" 
+            root /;
             add_header Cache-Control no-cache;
 
             # To avoid issues with cross-domain HTTP requests (e.g. during development)
