feat(rtmp_server) - configured nginx to auto-delete footage after a stream ends in order to manage space properly

--- a/rtmp_server/rtmp/nginx.conf
+++ b/rtmp_server/rtmp/nginx.conf
@@ -15,8 +15,9 @@ rtmp {
             hls on;
             hls_path /hls/;
             hls_fragment 10s; # default is 5s
-            hls_playlist_length 2m; # default is 30s
-            # once playlist length is reached it deletes the oldest fragments
+            hls_playlist_length 2m; # default is 30s; once playlist length is reached it deletes the oldest fragments
+            hls_cleanup on;
+
 
             on_publish http://auth_server:3000/auth;
         }
