Committing to save changes.

--- a/web_backend/src/web_backend.HttpApi.Host/appsettings.json
+++ b/web_backend/src/web_backend.HttpApi.Host/appsettings.json
@@ -5,6 +5,7 @@
     "RedirectAllowedUrls": "https://localhost:44320"
   },
   "ConnectionStrings": {
+    "Default": ""
   },
   "AuthServer": {
     "Authority": "https://localhost:44356",
