Committing to save changes.

--- a/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
+++ b/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
@@ -32,6 +32,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\web_backend.HttpApi.Client\web_backend.HttpApi.Client.csproj" />
+    <ProjectReference Include="..\web_backend.Application.Contracts\web_backend.Application.Contracts.csproj" />
+    <ProjectReference Include="..\web_backend.Application\web_backend.Application.csproj" />
   </ItemGroup>
 
 
