--- a/web_backend/src/web_backend.HttpApi.Host/appsettings.json
+++ b/web_backend/src/web_backend.HttpApi.Host/appsettings.json
@@ -5,12 +5,13 @@
     "RedirectAllowedUrls": "https://localhost:44320"
   },
   "ConnectionStrings": {
-    "Default": ""
+    "Default": "Data Source=localhost;Initial Catalog=vsstest;User ID=eleros;Password=Greecia12!;Encrypt=False;Integrated Security=True;"
   },
   "AuthServer": {
     "Authority": "https://localhost:44356",
     "RequireHttpsMetadata": false,
-    "SwaggerClientId": "web_backend_Swagger"
+    "SwaggerClientId": "web_backend_Swagger",
+    "RequireAuthenticatedUser": false
   },
   "StringEncryption": {
     "DefaultPassPhrase": "XukLKhoK569NXKHq"
