--- a/rtmp_server/rtmp/nginx.conf
+++ b/rtmp_server/rtmp/nginx.conf
@@ -18,13 +18,15 @@ rtmp {
             hls_playlist_length 2m; # default is 30s; once playlist length is reached it deletes the oldest fragments
             hls_cleanup on;
 
-
             on_publish http://auth_server:3000/auth;
         }
     }
 }
 
 http {
+    include mime.types;
+    default_type application/octet-stream;
+
     server {
         listen 8080;
 
@@ -33,16 +35,23 @@ http {
         }
 
         location /hls {
+            root /;
             types {
                 application/vnd.apple.mpegurl m3u8;
-                application/octet-stream ts;
+                video/mp2t ts;
             }
-            # With /hls mounted at the root level, set the root to "/" 
-            root /;
+            default_type application/vnd.apple.mpegurl;
+
+            add_header Content-Type application/vnd.apple.mpegurl always;
             add_header Cache-Control no-cache;
 
-            # To avoid issues with cross-domain HTTP requests (e.g. during development)
+            # Ensure proper CORS settings
             add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods 'GET, OPTIONS';
+            add_header Access-Control-Allow-Headers 'Origin, X-Requested-With, Content-Type, Accept';
+
+            # Make sure files are served correctly
+            autoindex on;
         }
     }
 }
