Production - fix rtmp_server so it will auto start in detached mode when the vm is turned off then on

--- a/rtmp_server/docker-compose.yml
+++ b/rtmp_server/docker-compose.yml
@@ -9,12 +9,14 @@ services:
       - ./data:/hls
     networks:
       - vssnet
+    restart: always
 
   auth:
     build: ./auth
     container_name: auth_server
     networks:
       - vssnet
+    restart: always
 
 networks:
   vssnet:
