Overall adjustments and improvements to front end.

--- a/rtmp_server/rtmp/nginx.conf
+++ b/rtmp_server/rtmp/nginx.conf
@@ -35,23 +35,31 @@ http {
         }
 
         location /hls {
-            root /;
-            types {
-                application/vnd.apple.mpegurl m3u8;
-                video/mp2t ts;
-            }
-            default_type application/vnd.apple.mpegurl;
+    root /;
+    types {
+        application/vnd.apple.mpegurl m3u8;
+        video/mp2t ts;
+    }
+    default_type application/vnd.apple.mpegurl;
 
-            add_header Content-Type application/vnd.apple.mpegurl always;
-            add_header Cache-Control no-cache;
+    add_header Content-Type application/vnd.apple.mpegurl always;
+    add_header Cache-Control no-cache;
 
-            # Ensure proper CORS settings
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods 'GET, OPTIONS';
-            add_header Access-Control-Allow-Headers 'Origin, X-Requested-With, Content-Type, Accept';
+    # CORS headers
+    add_header Access-Control-Allow-Origin * always;
+    add_header Access-Control-Allow-Methods 'GET, OPTIONS' always;
+    add_header Access-Control-Allow-Headers 'Origin, X-Requested-With, Content-Type, Accept' always;
 
-            # Make sure files are served correctly
-            autoindex on;
-        }
+    # Respond to preflight requests
+    if ($request_method = 'OPTIONS') {
+        add_header Access-Control-Max-Age 1728000;
+        add_header Content-Type 'text/plain charset=UTF-8';
+        add_header Content-Length 0;
+        return 204;
+    }
+
+    autoindex on;
+}
+
     }
 }
