--- a/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
+++ b/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <Import Project="..\..\common.props" />
 
@@ -32,8 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\web_backend.HttpApi.Client\web_backend.HttpApi.Client.csproj" />
-    <ProjectReference Include="..\web_backend.Application.Contracts\web_backend.Application.Contracts.csproj" />
-    <ProjectReference Include="..\web_backend.Application\web_backend.Application.csproj" />
+	<ProjectReference Include="..\web_backend.Domain.Shared\web_backend.Domain.Shared.csproj" />
   </ItemGroup>
 
 
