--- a/web_backend/src/web_backend.HttpApi/web_backend.HttpApi.csproj
+++ b/web_backend/src/web_backend.HttpApi/web_backend.HttpApi.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="8.3.1" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4" />
   </ItemGroup>
 
 </Project>
