--- a/.github/workflows/production_vss-backend-api.yml
+++ b/.github/workflows/production_vss-backend-api.yml
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '9.x'
 
       - name: Build with dotnet
-        run: dotnet build web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj --configuration Release
+        run: dotnet build ../../web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ../../web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
