--- a/.github/workflows/production_vss-backend-api.yml
+++ b/.github/workflows/production_vss-backend-api.yml
@@ -1,64 +1,26 @@
-name: Build and deploy ASP.Net Core app to Azure Web App - vss-backend-api
+deploy:
+  runs-on: ubuntu-latest
+  needs: build
+  permissions:
+    id-token: write
+    contents: read
 
-on:
-  push:
-    branches:
-      - Production
-  workflow_dispatch:
+  steps:
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v4
+      with:
+        name: .net-app
+      
+    - name: Login to Azure
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.VSS_CLIENT_ID }}
+        tenant-id: ${{ secrets.VSS_TENANT_ID }}
+        subscription-id: ${{ secrets.VSS_SUBSCRIPTION_ID }}
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '9.x'
-
-      - name: Build with dotnet
-        run: dotnet build ./web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj --configuration Release
-
-      - name: dotnet publish
-        run: dotnet publish ./web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj -c Release -o ./myapp
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: .net-app
-          path: ./myapp
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: .net-app
-          path: myapp  
-
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.VSS_CLIENT_ID }}
-          tenant-id: ${{ secrets.VSS_TENANT_ID }}
-          subscription-id: ${{ secrets.VSS_SUBSCRIPTION_ID }}
-
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'vss-backend-api'
-          package: ${{ github.workspace }}/myapp
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v3
+      with:
+        app-name: 'vss-backend-api'
+        package: .net-app
