--- a/.github/workflows/production_vss-backend-api.yml
+++ b/.github/workflows/production_vss-backend-api.yml
@@ -57,4 +57,4 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'vss-backend-api'
-          package: ./
+          package: ./myapp
