hosting - appsettings/yml updates

--- a/web_backend/src/web_backend.DbMigrator/appsettings.json
+++ b/web_backend/src/web_backend.DbMigrator/appsettings.json
@@ -1,15 +1,16 @@
 {
   "ConnectionStrings": {
+    "Default": "Data Source=vss-server.database.windows.net;Initial Catalog=VSS;User ID=vss-admin;Password=Varsity2024;Encrypt=True;TrustServerCertificate=False;"
   },
   "OpenIddict": {
     "Applications": {
       "web_backend_Blazor": {
         "ClientId": "web_backend_Blazor",
-        "RootUrl": "https://localhost:44320"
+        "RootUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net:44320"
       },
       "web_backend_Swagger": {
         "ClientId": "web_backend_Swagger",
-        "RootUrl": "https://localhost:44356"
+        "RootUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net:44356"
       }
     }
   }
