--- a/.github/workflows/production_vss-backend-api.yml
+++ b/.github/workflows/production_vss-backend-api.yml
@@ -1,4 +1,7 @@
-name: Build and deploy ASP.Net Core app to Azure Web App - vss-backend-api
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy ASP.Net Core with Blazor to Azure Web App
 
 on:
   push:
@@ -7,10 +10,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-apihost:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -18,43 +19,53 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
-
+          dotnet-version: '8.x'
+          include-prerelease: true
+      
+      - name: Install ABP CLI
+        run: |
+          dotnet tool install -g Volo.Abp.Cli
+          abp install-libs
+        shell: bash
+    
       - name: Build with dotnet
-        run: dotnet build ./web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj --configuration Release
+        run: dotnet build --configuration Release
 
-      - name: dotnet publish
-        run: dotnet publish ./web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj -c Release -o myapp
+      - name: Run migrations
+        run: dotnet run -- "${{ secrets.CONNECTION_STRING }}"
+        working-directory: ./src/demo.web_backend.DbMigrator 
 
-      - name: Upload artifact for deployment job
+      - name: dotnet publish apihost
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/apihost
+        working-directory: ./src/demo.web_backend.HttpApi.Host 
+
+      - name: Generate authserver.pfx
+        run: dotnet dev-certs https -v -ep ${{env.DOTNET_ROOT}}/apihost/authserver.pfx -p Varsity2024 # Replace with your password
+      
+      - name: Upload artifact for apihost
         uses: actions/upload-artifact@v4
         with:
-          name: myapp
-          path: myapp
+          name: .net-apihost
+          path: ${{env.DOTNET_ROOT}}/apihost
 
-  deploy:
+  deploy-apihost:
     runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      id-token: write
-      contents: read
+    needs: build-apihost
+    environment:
+      name: 'Production'
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact from apihost
         uses: actions/download-artifact@v4
         with:
-          name: myapp
-          path: myapp
+          name: .net-apihost
+          path: ./apihost
 
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.VSS_CLIENT_ID }}
-          tenant-id: ${{ secrets.VSS_TENANT_ID }}
-          subscription-id: ${{ secrets.VSS_SUBSCRIPTION_ID }}
-
-      - name: Deploy to Azure Web App
+      - name: Deploy apihost
+        id: deploy-to-webapp-2
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'vss-backend-api'
-          package: myapp
+          app-name: 'vss-backend-api' 
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.apihostblazorPublishSettings }} 
+
