hosting - finally works. here are final appsettings url fixes

--- a/web_backend/src/web_backend.DbMigrator/appsettings.json
+++ b/web_backend/src/web_backend.DbMigrator/appsettings.json
@@ -6,11 +6,11 @@
     "Applications": {
       "web_backend_Blazor": {
         "ClientId": "web_backend_Blazor",
-        "RootUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net:44320"
+        "RootUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net"
       },
       "web_backend_Swagger": {
         "ClientId": "web_backend_Swagger",
-        "RootUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net:44356"
+        "RootUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net"
       }
     }
   }
