--- a/web_backend/src/web_backend.HttpApi.Host/appsettings.json
+++ b/web_backend/src/web_backend.HttpApi.Host/appsettings.json
@@ -1,14 +1,14 @@
 {
   "App": {
-    "SelfUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net:44356",
+    "SelfUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
     "CorsOrigins": "https://*.web_backend.com,https://localhost:44320",
-    "RedirectAllowedUrls": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net:44320"
+    "RedirectAllowedUrls": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net"
   },
   "ConnectionStrings": {
     "Default": "Data Source=vss-server.database.windows.net;Initial Catalog=VSS;User ID=vss-admin;Password=Varsity2024;Encrypt=True;TrustServerCertificate=False;"
   },
   "AuthServer": {
-    "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net:44356",
+    "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
     "RequireHttpsMetadata": false,
     "SwaggerClientId": "web_backend_Swagger"
   },
