hosting - FE .yml and .json adjustments

--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
@@ -1,12 +1,12 @@
 {
   "AuthServer": {
-    "Authority": "https://localhost:44356",
+    "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
     "ClientId": "web_backend_Blazor",
     "ResponseType": "code"
   },
   "RemoteServices": {
     "Default": {
-      "BaseUrl": "https://localhost:44356"
+      "BaseUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net"
     }
   },
   "AbpCli": {
