--- a/web_backend/src/web_backend.Blazor/web_backend.Blazor.csproj
+++ b/web_backend/src/web_backend.Blazor/web_backend.Blazor.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
     <ProjectReference Include="..\web_backend.Blazor.Client\web_backend.Blazor.Client.csproj" />
   </ItemGroup>
