--- a/web_backend/src/web_backend.Domain.Shared/web_backend.Domain.Shared.csproj
+++ b/web_backend/src/web_backend.Domain.Shared/web_backend.Domain.Shared.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="8.3.1" />
