--- a/web_backend/src/web_backend.Domain/web_backend.Domain.csproj
+++ b/web_backend/src/web_backend.Domain/web_backend.Domain.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Volo.Abp.Emailing" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="8.3.1" />
