--- a/web_backend/src/web_backend.HttpApi.Client/web_backend.HttpApi.Client.csproj
+++ b/web_backend/src/web_backend.HttpApi.Client/web_backend.HttpApi.Client.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Volo.Abp.Account.HttpApi.Client" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="8.3.1" />
