--- a/web_backend/src/web_backend.HttpApi/web_backend.HttpApi.csproj
+++ b/web_backend/src/web_backend.HttpApi/web_backend.HttpApi.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Volo.Abp.Account.HttpApi" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="8.3.1" />
