--- a/web_backend/test/web_backend.Application.Tests/web_backend.Application.Tests.csproj
+++ b/web_backend/test/web_backend.Application.Tests/web_backend.Application.Tests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
   </ItemGroup>
 
