--- a/web_backend/test/web_backend.Domain.Tests/web_backend.Domain.Tests.csproj
+++ b/web_backend/test/web_backend.Domain.Tests/web_backend.Domain.Tests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
   </ItemGroup>
 
