--- a/web_backend/test/web_backend.EntityFrameworkCore.Tests/web_backend.EntityFrameworkCore.Tests.csproj
+++ b/web_backend/test/web_backend.EntityFrameworkCore.Tests/web_backend.EntityFrameworkCore.Tests.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\web_backend.EntityFrameworkCore\web_backend.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\web_backend.Application.Tests\web_backend.Application.Tests.csproj" />
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="8.3.1" />
   </ItemGroup>
 
