--- a/web_backend/test/web_backend.HttpApi.Client.ConsoleTestApp/web_backend.HttpApi.Client.ConsoleTestApp.csproj
+++ b/web_backend/test/web_backend.HttpApi.Client.ConsoleTestApp/web_backend.HttpApi.Client.ConsoleTestApp.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Autofac" Version="8.3.1" />
     <ProjectReference Include="..\..\src\web_backend.HttpApi.Client\web_backend.HttpApi.Client.csproj" />
