--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.Development.json
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.Development.json
@@ -1,3 +1,15 @@
 {
+  {
+    "AuthServer": {
+      "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
+      "ClientId": "web_backend_Blazor",
+      "ResponseType": "code"
+    },
+    "RemoteServices": {
+      "Default": {
+        "BaseUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net"
+      }
+    }
+  }
 
 }
