--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/staticwebapp.config.json
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": [ "/images/*.{png,jpg,gif,ico}", "/*.{css,js}", "/api/*" ]
+    "exclude": [ "/images/*.{png,jpg,gif,ico}", "/*.css", "/api/*" ]
   },
   "routes": [
     {
@@ -20,3 +20,4 @@
     "X-Content-Type-Options": "nosniff"
   }
 }
+
