--- a/web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj
+++ b/web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+    <PackageReference Include="Stripe.net" Version="48.0.2" />
     <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Autofac" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.3.1" />
