feat(payment) stripe config.

--- a/web_backend/src/web_backend.HttpApi.Host/appsettings.json
+++ b/web_backend/src/web_backend.HttpApi.Host/appsettings.json
@@ -14,5 +14,10 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "XukLKhoK569NXKHq"
+  },
+  "Stripe": {
+    "SecretKey": "sk_test_...",
+    "WebhookSecret": "whsec_..." 
   }
+
 }
