feat(payment) - build BE architecture/APIs to create checkout session, redirect to stripe for said checkout session, webhook to handle logic after checkout session, and Db updates if a user subscribes. Also a dummy .blazor page to test FE integration

--- a/web_backend/src/web_backend.HttpApi.Host/appsettings.json
+++ b/web_backend/src/web_backend.HttpApi.Host/appsettings.json
@@ -5,6 +5,7 @@
     "RedirectAllowedUrls": "https://localhost:44320"
   },
   "ConnectionStrings": {
+    
   },
   "AuthServer": {
     "Authority": "https://localhost:44356",
@@ -16,8 +17,8 @@
     "DefaultPassPhrase": "XukLKhoK569NXKHq"
   },
   "Stripe": {
-    "SecretKey": "sk_test_...",
-    "WebhookSecret": "whsec_..." 
+    "SecretKey": "",
+    "WebhookSecret": ""
   }
 
 }
