--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/staticwebapp.config.json
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": [ "/images/*.{png,jpg,gif,ico}", "/*.css", "/api/*" ]
+    "exclude": [ "/images/*.{png,jpg,gif}", "/css/*", "/js/*" ]
   },
   "routes": [
     {
