--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
@@ -2,6 +2,7 @@
   "AuthServer": {
     "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
     "ClientId": "web_backend_Blazor",
+    "ClientSecret": "1q2w3e*",
     "ResponseType": "code"
   },
   "RemoteServices": {
@@ -11,12 +12,13 @@
   },
   "AbpCli": {
     "Bundle": {
-      "Mode": "BundleAndMinify", /* Options: None, Bundle, BundleAndMinify */
+      "Mode": "BundleAndMinify",
       "Name": "global",
-      "IsBlazorWebApp": true,
       "Parameters": {
-
-      }
+        "LeptonTheme.Style": "Style1",
+        "LeptonTheme.ChangeStyleDynamically": "true"
+      },
+      "IsBlazorWebApp": true
     }
   }
 }
