--- a/web_backend/src/web_backend.HttpApi.Host/appsettings.json
+++ b/web_backend/src/web_backend.HttpApi.Host/appsettings.json
@@ -15,5 +15,22 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "XukLKhoK569NXKHq"
+  },
+  "IdentityClients": {
+    "Default": {
+      "GrantType": "password",
+      "ClientId": "web_backend_App",
+      "UserName": null,
+      "UserPassword": null,
+      "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
+      "Scope": "web_backend"
+    },
+    "AbpMvcClient": {
+      "GrantType": "client_credentials",
+      "ClientId": "web_backend_Blazor",
+      "ClientSecret": "1q2w3e*",
+      "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
+      "Scope": "web_backend"
+    }
   }
 }
