--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
@@ -8,6 +8,25 @@
   "RemoteServices": {
     "Default": {
       "BaseUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net"
+    },
+    "AbpMvcClient": {
+      "BaseUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net"
+    }
+  },
+  "IdentityClients": {
+    "Default": {
+      "GrantType": "client_credentials",
+      "ClientId": "web_backend_Blazor",
+      "ClientSecret": "1q2w3e*",
+      "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
+      "Scope": "web_backend"
+    },
+    "AbpMvcClient": {
+      "GrantType": "client_credentials",
+      "ClientId": "web_backend_Blazor",
+      "ClientSecret": "1q2w3e*",
+      "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
+      "Scope": "web_backend"
     }
   },
   "AbpCli": {
