--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
@@ -15,18 +15,22 @@
   },
   "IdentityClients": {
     "Default": {
-      "GrantType": "client_credentials",
+      "GrantType": "authorization_code",
       "ClientId": "web_backend_Blazor",
       "ClientSecret": "1q2w3e*",
       "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
-      "Scope": "web_backend"
+      "Scope": "web_backend",
+      "RequireHttps": false,
+      "ResponseType": "code"
     },
     "AbpMvcClient": {
-      "GrantType": "client_credentials",
+      "GrantType": "authorization_code",
       "ClientId": "web_backend_Blazor",
       "ClientSecret": "1q2w3e*",
       "Authority": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
-      "Scope": "web_backend"
+      "Scope": "web_backend",
+      "RequireHttps": false,
+      "ResponseType": "code"
     }
   },
   "AbpCli": {
