Rever to 2b9d0ed - undo everything since

--- a/web_backend/src/web_backend.HttpApi.Host/appsettings.json
+++ b/web_backend/src/web_backend.HttpApi.Host/appsettings.json
@@ -1,8 +1,8 @@
 {
   "App": {
     "SelfUrl": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net",
-    "CorsOrigins": "https://*.web_backend.com,https://localhost:44320,https://salmon-glacier-08dca301e.6.azurestaticapps.net,https://salmon-glacier-08dca301e.6.azurestaticapps.net",
-    "RedirectAllowedUrls": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net,https://salmon-glacier-08dca301e.6.azurestaticapps.net,https://salmon-glacier-08dca301e.6.azurestaticapps.net/authentication/login-callback,https://salmon-glacier-08dca301e.6.azurestaticapps.net/landing"
+    "CorsOrigins": "https://*.web_backend.com,https://localhost:44320,https://salmon-glacier-08dca301e.6.azurestaticapps.net",
+    "RedirectAllowedUrls": "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net,https://salmon-glacier-08dca301e.6.azurestaticapps.net,https://salmon-glacier-08dca301e.6.azurestaticapps.net/authentication/login-callback"
   },
   "ConnectionStrings": {
     "Default": "Data Source=vss-server.database.windows.net;Initial Catalog=VSS;User ID=vss-admin;Password=Varsity2024;Encrypt=True;TrustServerCertificate=False;"
