--- a/web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj
+++ b/web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj
@@ -8,8 +8,6 @@
     <RootNamespace>web_backend</RootNamespace>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
     <UserSecretsId>web_backend-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
-    <RazorCompileOnBuild>true</RazorCompileOnBuild>
-    <RazorCompileOnPublish>true</RazorCompileOnPublish>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,14 +15,15 @@
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="8.3.1" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Autofac" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="8.3.1" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="8.3.1" />
-    <PackageReference Include="Volo.Abp.UI" Version="8.3.1" />
-    <PackageReference Include="Volo.Abp.Ui.Navigation" Version="8.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="8.3.1" />
+
   </ItemGroup>
 
   <ItemGroup>
