--- a/web_backend/src/web_backend.Application/web_backend.Application.csproj
+++ b/web_backend/src/web_backend.Application/web_backend.Application.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="8.3.1" />
