Add Microsoft.Extensions.Http and StreamProxyController
- Introduced `Microsoft.Extensions.Http` package (v8.0.0) across multiple projects for HTTP client configuration.
- Configured a new HTTP client named "StreamProxy" with a 10-second timeout in `web_backend.ApplicationModule.cs`.
- Added `StreamProxyController` to handle GET requests at the route "hls/{**path}", proxying requests to a stream server with logging and error handling.
- Updated various `.csproj` files to reference the new package, improving functionality and maintainability.

--- a/web_backend/src/web_backend.Blazor/web_backend.Blazor.csproj
+++ b/web_backend/src/web_backend.Blazor/web_backend.Blazor.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <ProjectReference Include="..\web_backend.Blazor.Client\web_backend.Blazor.Client.csproj" />
   </ItemGroup>
 
