--- a/web_backend/src/web_backend.Application.Contracts/web_backend.Application.Contracts.csproj
+++ b/web_backend/src/web_backend.Application.Contracts/web_backend.Application.Contracts.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="CsvHelper" Version="33.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 		<PackageReference Include="Volo.Abp.ObjectExtending" Version="8.3.1" />
 		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="8.3.1" />
 		<PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="8.3.1" />
