--- a/web_backend/src/web_backend.DbMigrator/web_backend.DbMigrator.csproj
+++ b/web_backend/src/web_backend.DbMigrator/web_backend.DbMigrator.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>    
     <PackageReference Include="CsvHelper" Version="33.0.1" />    
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />    
     <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
