--- a/web_backend/src/web_backend.Domain.Shared/web_backend.Domain.Shared.csproj
+++ b/web_backend/src/web_backend.Domain.Shared/web_backend.Domain.Shared.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="8.3.1" />
