--- a/web_backend/src/web_backend.Domain/web_backend.Domain.csproj
+++ b/web_backend/src/web_backend.Domain/web_backend.Domain.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.Emailing" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="8.3.1" />
