--- a/web_backend/src/web_backend.EntityFrameworkCore/web_backend.EntityFrameworkCore.csproj
+++ b/web_backend/src/web_backend.EntityFrameworkCore/web_backend.EntityFrameworkCore.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\web_backend.Domain\web_backend.Domain.csproj" />
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="8.3.1" />
