--- a/web_backend/src/web_backend.HttpApi.Client/web_backend.HttpApi.Client.csproj
+++ b/web_backend/src/web_backend.HttpApi.Client/web_backend.HttpApi.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.Account.HttpApi.Client" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="8.3.1" />
