--- a/web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj
+++ b/web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="8.3.1" />
