--- a/web_backend/src/web_backend.HttpApi/web_backend.HttpApi.csproj
+++ b/web_backend/src/web_backend.HttpApi/web_backend.HttpApi.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.Account.HttpApi" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="8.3.1" />
