--- a/web_backend/test/web_backend.Application.Tests/web_backend.Application.Tests.csproj
+++ b/web_backend/test/web_backend.Application.Tests/web_backend.Application.Tests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
   </ItemGroup>
 
