--- a/web_backend/test/web_backend.EntityFrameworkCore.Tests/web_backend.EntityFrameworkCore.Tests.csproj
+++ b/web_backend/test/web_backend.EntityFrameworkCore.Tests/web_backend.EntityFrameworkCore.Tests.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\..\src\web_backend.EntityFrameworkCore\web_backend.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\web_backend.Application.Tests\web_backend.Application.Tests.csproj" />
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="8.3.1" />
   </ItemGroup>
 
