--- a/web_backend/test/web_backend.TestBase/web_backend.TestBase.csproj
+++ b/web_backend/test/web_backend.TestBase/web_backend.TestBase.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.TestBase" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Autofac" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Authorization" Version="8.3.1" />
