Add Scoreboard Overlay Component with Admin Controls and Local Storage Support
- Implemented ScoreboardOverlay.razor and ScoreboardOverlay.razor.cs for displaying and managing scoreboard data.
- Added properties for teams, scores, timeouts, and game clock management.
- Included functionality for different sports with specific rules (Basketball, Football, Soccer, Hockey, Baseball).
- Integrated local storage for saving and loading scoreboard settings.
- Created a JavaScript file for Bootstrap modal helper functions to enhance UI interactions.
- Added styling for scoreboard display and admin controls.

--- a/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
+++ b/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.4" />
+    <PackageReference Include="System.Net.Http.Json" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +35,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\web_backend.HttpApi.Client\web_backend.HttpApi.Client.csproj" />
 	<ProjectReference Include="..\web_backend.Domain.Shared\web_backend.Domain.Shared.csproj" />
+	<ProjectReference Include="..\web_backend.Application.Contracts\web_backend.Application.Contracts.csproj" />
   </ItemGroup>
 
 
