--- a/web_backend/src/web_backend.HttpApi.Host/appsettings.json
+++ b/web_backend/src/web_backend.HttpApi.Host/appsettings.json
@@ -5,6 +5,7 @@
     "RedirectAllowedUrls": "https://localhost:44320"
   },
   "ConnectionStrings": {
+    "Default": "Data Source=localhost;Initial Catalog=vsstest;User ID=sa;Password=Greecia12!;Encrypt=False;Integrated Security=False;"
   },
   "AuthServer": {
     "Authority": "https://localhost:44356",
