--- a/web_backend/src/web_backend.Application/web_backend.Application.csproj
+++ b/web_backend/src/web_backend.Application/web_backend.Application.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="8.3.1" />
