--- a/web_backend/src/web_backend.DbMigrator/appsettings.json
+++ b/web_backend/src/web_backend.DbMigrator/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "Default": "Data Source=localhost;Initial Catalog=vsstest;User ID=sa;Password=Greecia12!;Encrypt=False;Integrated Security=False;"
   },
   "OpenIddict": {
     "Applications": {
