server.js adjustment, setting hlsUrl to our domain

--- a/rtmp_server/rtmp/nginx.conf
+++ b/rtmp_server/rtmp/nginx.conf
@@ -18,12 +18,12 @@ rtmp {
             hls_playlist_length 2m; # default is 30s; once playlist length is reached it deletes the oldest fragments
             hls_cleanup on;
 
-            on_publish https://auth_server:3000/auth;
+            on_publish http://auth_server:3000/auth;
         }
     }
 }
 
-https {
+http {
     include mime.types;
     default_type application/octet-stream;
 
