Enhance JSON handling and update project dependencies
- Added JSON serialization options in Program.cs for null handling and case insensitivity.
- Improved error logging during application initialization and host running.
- Updated web_backend.Blazor.Client.csproj with new package references, including authentication and options extensions.
- Enhanced web_backendBlazorClientModule.cs with HTTP client configuration and added dependency for identity model.
- Modified appsettings.json to include a new endpoint for dynamic application configuration.

--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
@@ -23,5 +23,6 @@
       },
       "IsBlazorWebApp": true
     }
-  }
+  },
+  "AbpApplicationConfigurationEndpoint": "api/abp/application-configuration"
 }
