--- a/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
+++ b/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-  <Import Project="..\..\common.props" />
+	<Import Project="..\..\common.props" />
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -10,37 +10,39 @@
 		<GenerateMvcApplicationPartsAssemblyAttributes>false</GenerateMvcApplicationPartsAssemblyAttributes>
 	</PropertyGroup>
 
-
 	<ItemGroup>
-    <PackageReference Include="Blazorise.Bootstrap5" Version="1.5.2" />
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.5.2" />
-    <PackageReference Include="CsvHelper" Version="33.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+		<PackageReference Include="Blazorise.Bootstrap5" Version="1.5.2" />
+		<PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.5.2" />
+		<PackageReference Include="CsvHelper" Version="33.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.4" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.4" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.4" />
 		<PackageReference Include="System.Net.Http.Json" Version="9.0.4" />
-  </ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.BasicTheme" Version="8.3.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.BasicTheme" Version="8.3.1" />
+		<PackageReference Include="Volo.Abp.Http.Client.IdentityModel.WebAssembly" Version="8.3.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Volo.Abp.Autofac.WebAssembly" Version="8.3.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Volo.Abp.Autofac.WebAssembly" Version="8.3.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Volo.Abp.Identity.Blazor.WebAssembly" Version="8.3.1" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Blazor.WebAssembly" Version="8.3.1" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Blazor.WebAssembly" Version="8.3.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Volo.Abp.Identity.Blazor.WebAssembly" Version="8.3.1" />
+		<PackageReference Include="Volo.Abp.TenantManagement.Blazor.WebAssembly" Version="8.3.1" />
+		<PackageReference Include="Volo.Abp.SettingManagement.Blazor.WebAssembly" Version="8.3.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\web_backend.HttpApi.Client\web_backend.HttpApi.Client.csproj" />
-	<ProjectReference Include="..\web_backend.Domain.Shared\web_backend.Domain.Shared.csproj" />
-	<ProjectReference Include="..\web_backend.Application.Contracts\web_backend.Application.Contracts.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\src\web_backend.HttpApi.Client\web_backend.HttpApi.Client.csproj" />
+		<ProjectReference Include="..\web_backend.Domain.Shared\web_backend.Domain.Shared.csproj" />
+		<ProjectReference Include="..\web_backend.Application.Contracts\web_backend.Application.Contracts.csproj" />
+	</ItemGroup>
 
 </Project>
