Enhance Blazor app with Volo.Abp dependencies
Updated the application to include new Volo.Abp dependencies for AutoMapper, HTTP client functionalities, and identity model support. Added custom JSON serialization options for nullable types in `Program.cs` with a new `NullableTypeConverterFactory`. Improved error handling during application initialization by logging additional details. Streamlined service configuration in `web_backendBlazorClientModule` and updated `appsettings.json` with new API endpoints for better backend communication. Introduced `NullableTypeConverterFactory` in `JsonHelpers.cs` for enhanced nullable type serialization.

--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
@@ -24,5 +24,8 @@
       "IsBlazorWebApp": true
     }
   },
-  "AbpApplicationConfigurationEndpoint": "api/abp/application-configuration"
+  "AbpApplicationConfigurationEndpoint": "api/abp/application-configuration",
+  "AbpApiDefinitionEndpoint": "api/abp/api-definition",
+  "AbpApplicationConfigurationUrl": "api/abp/application-configuration"
+
 }
