--- a/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
+++ b/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
@@ -22,6 +22,9 @@
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.4" />
 		<PackageReference Include="System.Net.Http.Json" Version="9.0.4" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly" Version="8.3.1" />
+		<PackageReference Include="Volo.Abp.Http.Client" Version="8.3.1" />
+		<PackageReference Include="Volo.Abp.Http.Client.IdentityModel.WebAssembly" Version="8.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
