Remove nullable type converters and update configurations
- Deleted `NullableTypeConverterFactory` and `NullableConverter<T>` from `JsonHelpers.cs` to avoid issues with nullability context.
- Commented out the addition of the removed converter in `Program.cs` and clarified JSON serialization options.
- Updated remote service configuration in `web_backendBlazorClientModule.cs` to use `remoteServiceBaseUrl` directly.
- Enhanced HTTP client proxy configuration for better flexibility.
- Removed `AbpApplicationConfigurationUrl` from `appsettings.json` for simplification.

--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/appsettings.json
@@ -25,7 +25,5 @@
     }
   },
   "AbpApplicationConfigurationEndpoint": "api/abp/application-configuration",
-  "AbpApiDefinitionEndpoint": "api/abp/api-definition",
-  "AbpApplicationConfigurationUrl": "api/abp/application-configuration"
-
+  "AbpApiDefinitionEndpoint": "api/abp/api-definition"
 }
