Refactor Program.cs and update project configuration
Restructured the `Main` method in `Program.cs` for improved application initialization. Simplified API base URL configuration and adjusted JSON serialization options. Enhanced error handling during initialization and streamlined overall flow. Updated `web_backend.Blazor.Client.csproj` to enable `NullabilityInfoContextSupport` for better nullability analysis.

--- a/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
+++ b/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
@@ -8,6 +8,7 @@
 		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
 		<GenerateApplicationPartFactoryAttribute>false</GenerateApplicationPartFactoryAttribute>
 		<GenerateMvcApplicationPartsAssemblyAttributes>false</GenerateMvcApplicationPartsAssemblyAttributes>
+		<NullabilityInfoContextSupport>true</NullabilityInfoContextSupport>
 	</PropertyGroup>
 
 	<ItemGroup>
