Removing scoreboard from Prod for more testing

--- a/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
+++ b/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
@@ -51,4 +51,8 @@
 		<ProjectReference Include="..\web_backend.Application.Contracts\web_backend.Application.Contracts.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Hubs\" />
+	</ItemGroup>
+
 </Project>
